--- a/Concept/CMakeLists.txt
+++ b/Concept/CMakeLists.txt
@@ -26,6 +26,8 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party ${CMAKE_CURRENT_BINARY_
 qt_add_executable(ConceptApp
     src/main.cpp
     includes/mainhelp.h src/mainhelp.cpp
+    includes/calendar.h src/calendar.cpp
+    includes/toolBox.h src/toolBox.cpp
     includes/setFocusPeriod.h src/setFocusPeriod.cpp
     includes/export.h includes/precompiled.h
     includes/database/notes.h src/database/notes.cpp
