Statistics for timer
This is the branch for the statistics window that is opened but not implemented in main

--- a/Concept/CMakeLists.txt
+++ b/Concept/CMakeLists.txt
@@ -44,6 +44,8 @@ qt_add_executable(ConceptApp
     includes/todoItem.h
     src/todoList.cpp
     src/todoItem.cpp
+    includes/StatsWindow.h
+    src/StatsWindow.cpp
 )
 
 ## Configure QxOrm
